# redis-helper-kit

./: DEVDOC.md  README.md  exp.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: DESIGN.md
examples/: basic_usage.py
redis_helper_kit/: __init__.py  connection.py  redis_crud_operations.py
tests/: test_connection.py  test_redis_crud_operations.py
